@@ -3,7 +3,6 @@ package com.spring_commerce.utils;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.UUID;
 
 import org.springframework.web.multipart.MultipartFile;
@@ -13,18 +12,23 @@ public class AppUtils {
     }
 
     public static String uploadImage(String path, MultipartFile imageFile) throws IOException {
+
         String originalFileName = imageFile.getOriginalFilename();
-        String dotExtension = originalFileName.substring(originalFileName.lastIndexOf("."));
+        String fileExtension = originalFileName.substring(originalFileName.lastIndexOf("."));
 
         String randomId = UUID.randomUUID().toString();
-        String newFileName = randomId + dotExtension;
 
-        Path folder = Paths.get(System.getProperty("user.dir"), path);
-        Files.createDirectories(folder);
+        String newFileName = randomId + fileExtension;
+        Path newFolder = Path.of(System.getProperty("user.dir"), path);
 
-        Path destination = folder.resolve(newFileName);
-        Files.copy(imageFile.getInputStream(), destination);
+        if (!Files.exists(newFolder))
+            Files.createDirectories(newFolder);
+
+        Path newFile = newFolder.resolve(newFileName);
+
+        Files.copy(imageFile.getInputStream(), newFile);
 
         return newFileName;
+
     }
 }
